Minor text updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="PanelWizard - Home Electrification Guide">
+    <meta property="og:title" content="PanelWizard - A Home Electrification Guide">
     <meta property="og:description" content="Help homeowners understand how to electrify their home using their existing electrical panel">
     <meta property="og:image" content="https://www.energy.ca.gov/sites/default/files/california-energy-commission-logo_0.png">
     <meta property="og:url" content="https://wizard.hea.com">
@@ -16,7 +16,7 @@
             <span class="theme-toggle-icon">🌙</span>
         </button>
         <header>
-            <h1>Electric Panel Wizard</h1>
+            <h1>Home Electrification Wizard</h1>
         </header>
         <main>
             <p class="welcome-text">Your home electrification journey starts here!</p>
