Several minor updates

--- a/index.html
+++ b/index.html
@@ -25,19 +25,16 @@
             
             <ul class="nav-list">
                 <li><a href="#step1">1. Introduction</a></li>
-                <li><a href="#step2">2. Home Assessment</a></li>
+                <li><a href="#step2">2. Electrification Goals</a></li>
                 <li><a href="#step3">3. Panel Inventory</a></li>
                 <li class="has-dropdown">
                     <a href="#step4">4. Load Analysis</a>
                     <ul class="dropdown">
                         <li><a href="#step4-1">4.1 Current Usage</a></li>
-                        <li><a href="#step4-2">4.2 Future Loads</a></li>
-                        <li><a href="#step4-3">4.3 Peak Demand</a></li>
-                        <li><a href="#step4-4">4.4 Circuit Planning</a></li>
+                        <li><a href="#step4-3">4.2 Peak Demand</a></li>
                     </ul>
                 </li>
-                <li><a href="#step5">5. Recommendations</a></li>
-                <li><a href="#step6">6. Action Plan</a></li>
+                <li><a href="#step6">5. Action Plan</a></li>
             </ul>
         </nav>
 
@@ -67,15 +64,15 @@
             </section>
 
             <section id="step2" class="step-content">
-                <h2>2. Home Assessment</h2>
+                <h2>2. Electrification Goals</h2>
                 <div class="content-box">
-                    <h3>Basic Home Information</h3>
-                    <p>Let's gather some key details about your home to better understand your electrification needs:</p>
+                    <h3>Your Electrification Priorities</h3>
+                    <p>Let's identify which fossil fuel appliances you want to replace with electric alternatives:</p>
                     <ul>
-                        <li>Home square footage</li>
-                        <li>Year built</li>
-                        <li>Current heating/cooling system</li>
-                        <li>Insulation status</li>
+                        <li>Heating and cooling system</li>
+                        <li>Water heater</li>
+                        <li>Cooking appliances</li>
+                        <li>Electric vehicle charging</li>
                     </ul>
                 </div>
             </section>
@@ -107,19 +104,8 @@
                     </ul>
                 </section>
 
-                <section id="step4-2" class="content-box">
-                    <h3>4.2 Future Loads</h3>
-                    <p>Plan for new electrical appliances:</p>
-                    <ul>
-                        <li>Heat pump HVAC</li>
-                        <li>Electric water heater</li>
-                        <li>EV charging</li>
-                        <li>Electric cooking</li>
-                    </ul>
-                </section>
-
                 <section id="step4-3" class="content-box">
-                    <h3>4.3 Peak Demand</h3>
+                    <h3>4.2 Peak Demand</h3>
                     <p>Calculate maximum power needs:</p>
                     <ul>
                         <li>Simultaneous usage scenarios</li>
@@ -127,34 +113,10 @@
                         <li>Safety margins</li>
                     </ul>
                 </section>
-
-                <section id="step4-4" class="content-box">
-                    <h3>4.4 Circuit Planning</h3>
-                    <p>Map out circuit requirements:</p>
-                    <ul>
-                        <li>Circuit assignments</li>
-                        <li>Load balancing</li>
-                        <li>Dedicated circuits needed</li>
-                    </ul>
-                </section>
-            </section>
-
-            <section id="step5" class="step-content">
-                <h2>5. Recommendations</h2>
-                <div class="content-box">
-                    <h3>Suggested Upgrades</h3>
-                    <p>Based on your assessment, we'll provide:</p>
-                    <ul>
-                        <li>Panel upgrade requirements</li>
-                        <li>Circuit modifications</li>
-                        <li>Equipment recommendations</li>
-                        <li>Prioritized action items</li>
-                    </ul>
-                </div>
             </section>
 
             <section id="step6" class="step-content">
-                <h2>6. Action Plan</h2>
+                <h2>5. Action Plan</h2>
                 <div class="content-box">
                     <h3>Implementation Strategy</h3>
                     <p>Your roadmap to electrification:</p>
