Minor text updates

--- a/index.html
+++ b/index.html
@@ -66,13 +66,15 @@
             <section id="step2" class="step-content">
                 <h2>2. Electrification Goals</h2>
                 <div class="content-box">
-                    <h3>Your Electrification Priorities</h3>
-                    <p>Let's identify which fossil fuel appliances you want to replace with electric alternatives:</p>
+                    <h3>Which of these do you need to Electrifify?</h3>
+                    <p>Let's identify which fossil fuel appliances you want to replace with electric alternatives. To future proof your home, we recommend building a plan that includes ALL of your electrification needs upfront, then you can stage them at your convenience.</p>
                     <ul>
-                        <li>Heating and cooling system</li>
+                        <li>Heating system like a furnace or boiler</li>
                         <li>Water heater</li>
                         <li>Cooking appliances</li>
-                        <li>Electric vehicle charging</li>
+                        <li>Clothes dryer</li>
+                        <li>Other natural gas appliances like a fireplace, pool heater, BBQ, outdoor space heater, etc.</li>
+                        <li>Electric vehicle charger</li>
                     </ul>
                 </div>
             </section>
