Refactored CSS classes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <li><a href="#step4-3">4.2 Peak Demand</a></li>
                     </ul>
                 </li>
-                <li><a href="#step6">5. Action Plan</a></li>
+                <li><a href="#step5">5. Action Plan</a></li>
             </ul>
         </nav>
 
@@ -198,7 +198,7 @@
                 </form>
             </section>
 
-            <section id="step6" class="step-content">
+            <section id="step5" class="step-content">
                 <h2>5. Action Plan</h2>
                 <div class="content-box">
                     <h3>Implementation Strategy</h3>
@@ -213,8 +213,8 @@
                 <form class="checklist-form" autocomplete="off">
                     <div class="checkbox-group">
                         <label class="checkbox-label">
-                            <input type="checkbox" name="skipStep6" autocomplete="off">
-                            <span>Skip this step</span>
+                            <input type="checkbox" name="skipStep5" autocomplete="off">
+                            <span>I'm ready to move on</span>
                         </label>
                     </div>
                 </form>
