--- a/index.html
+++ b/index.html
@@ -224,5 +224,6 @@
         </main>
     </div>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </body>
 </html> 
