--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
             </section>
         </main>
     </div>
+    <div id="versionInfo" class="version-info"></div>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </body>
