Refactored step management in preparation for adding more steps

--- a/index.html
+++ b/index.html
@@ -27,23 +27,17 @@
                 <span></span>
             </button>
             
-            <ul class="nav-list">
-                <li><a href="#step1">1. Introduction</a></li>
-                <li><a href="#step2">2. Electrification Goals</a></li>
-                <li><a href="#step3">3. Panel Inventory</a></li>
-                <li class="has-dropdown">
-                    <a href="#step4">4. Load Analysis</a>
-                    <ul class="dropdown">
-                        <li><a href="#step4-1">4.1 Current Usage</a></li>
-                        <li><a href="#step4-3">4.2 Peak Demand</a></li>
-                    </ul>
-                </li>
-                <li><a href="#step5">5. Action Plan</a></li>
-            </ul>
+            <nav class="nav-list">
+                <a href="#projectInfo">1. Project Information</a>
+                <a href="#electrificationGoals">2. Electrification Goals</a>
+                <a href="#currentUsage">3. Current Usage</a>
+                <a href="#loadAnalysis">4. Load Analysis</a>
+                <a href="#actionPlan">5. Action Plan</a>
+            </nav>
         </nav>
 
         <main>
-            <section id="step1" class="step-content">
+            <section id="projectInfo" class="step-content">
                 <h2>Welcome to the PanelWizard</h2>
                 <div class="content-box">
                     <h3>Your Home Electrification Planning Tool</h3>
@@ -88,7 +82,7 @@
                 </div>
             </section>
 
-            <section id="step2" class="step-content">
+            <section id="electrificationGoals" class="step-content">
                 <h2>2. Electrification Goals</h2>
                 <div class="content-box">
                     <h3>Which of these tasks are needed to fully electrify your home?</h3>
@@ -146,7 +140,7 @@
                 </div>
             </section>
 
-            <section id="step3" class="step-content">
+            <section id="currentUsage" class="step-content">
                 <h2>3. Electric Service Assessment</h2>
                 <div class="content-box">
                     <h3>About your electric panel</h3>
@@ -168,7 +162,7 @@
                 </form>
             </section>
 
-            <section id="step4" class="step-content">
+            <section id="loadAnalysis" class="step-content">
                 <h2>4. Load Analysis</h2>
                 
                 <section id="step4-1" class="content-box">
@@ -200,7 +194,7 @@
                 </form>
             </section>
 
-            <section id="step5" class="step-content">
+            <section id="actionPlan" class="step-content">
                 <h2>5. Action Plan</h2>
                 <div class="content-box">
                     <h3>Implementation Strategy</h3>
