Added capacity summary to Load Analysis step

--- a/index.html
+++ b/index.html
@@ -215,6 +215,12 @@
                         <p class="form-help">Enter the available capacity shown by the calculator</p>
                     </form>
                 </section>
+
+                <section id="capacitySummary" class="content-box" style="display: none;">
+                    <h3>Capacity Summary</h3>
+                    <p id="capacitySummaryText"></p>
+                </section>
+
                 <form class="checklist-form" autocomplete="off">
                     <div class="checkbox-group">
                         <label class="checkbox-label">
