Added a default project name to the project form

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                     <input 
                                         type="text" 
                                         id="projectName" 
-                                        placeholder="e.g., Byrd House or 123 River Road"
+                                        placeholder="Enter a custom project name"
                                         required
                                     >
                                     <p class="form-help">This name will be used for your project file</p>
