Hide reset button until step 1 is completed

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             </section>
 
             <section id="currentEquipment" class="step-content">
-                <h2>3. Current Equipment</h2>
+                <h2>3. Current ElectricalEquipment</h2>
                 <div class="content-box">
                     <h3>Your Current Electrical Panel Size</h3>
                     <p>Please enter your current electrical panel size in amps. This information is required to help us calculate your panel's capacity for electrification.</p>
@@ -200,7 +200,7 @@
                             To find out, look for the <a href="https://static.hea.com/images/Service_Amps_on_Meter.png" target="_blank">CL number on your meter</a>, see instructions <a href="https://www.quitcarbon.com/help/how-to-find-your-main-electrical-service" target="_blank">here</a>, or watch this <a href="https://www.thespruce.com/electrical-service-size-of-my-home-1152752" target="_blank">video</a>.
                             Or try using the <a href="https://www.kopperfield.com/panel-schedule" target="_blank">Kopperfield panel schedule tool</a> - it can help determine your panel size from a photo!</p><br>
                     </form>
-                    <h3>Additional Equipment Information -- FUTURE ENHANCEMENTS</h3>
+                    <h3>Additional Equipment Information</h3>
                     <p>In a future version of this tool, we may also ask about other useful information including: 
                         <ul>
                             <li>Your panel type (some are dangerous and need to be replaced, like Federal Pacific, Zinsco, Stablock & Pushmatic)</li>
