Added more tooltips and improved the summary message for remaining capacity

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                     <span>Heating Systems <span class="tooltip-container"><span class="tooltip">This could be a natural gas furnace, boiler or wall heater. Or even a gas fireplace if it is used for heating.</span>ⓘ</span></span>
                                 </label>
                                 <div class="quantity-field" data-for="heating">
-                                    <label>Replace <input type="number" min="1" max="20" value="2" name="heating_quantity"> tons of natural gas heating system capacity with new electric heat pump(s)</label>
+                                    <label>Replace <input type="number" min="1" max="20" value="2" name="heating_quantity"> tons <span class="tooltip-container"><span class="tooltip">A "ton" in heating refers to the cooling capacity of an air conditioner or heat pump. One ton equals 12,000 BTU/hour of cooling capacity. For heating, this typically translates to about 1-1.5 tons per 500-600 square feet of living space.</span>ⓘ</span> of natural gas heating system capacity with new electric heat pump(s)</label>
                                 </div>
                                 
                                 <label class="checkbox-label">
