Insert new step to select new electric appliances

--- a/index.html
+++ b/index.html
@@ -284,8 +284,35 @@
                 </form>
             </section>
 
+            <section id="planNewAppliances" class="step-content">
+                <h2>6. Plan for New Appliances</h2>
+                <div class="content-box">
+                    <h3>Define Your New Electric Appliances</h3>
+                    <p>Now that we know your panel capacity and electrification goals, let's plan what specific electric appliances you'll need to replace your gas appliances.</p>
+                    <p>This step will help you identify the exact models and specifications of the electric appliances that will work with your existing panel capacity.</p>
+                    
+                    <!-- Placeholder content for the new step -->
+                    <p><em>This section is under development. It will include:</em></p>
+                    <ul>
+                        <li>Heat pump selection and sizing</li>
+                        <li>Water heater specifications</li>
+                        <li>Electric cooking appliance options</li>
+                        <li>EV charger specifications</li>
+                        <li>Load calculations for your specific choices</li>
+                    </ul>
+                </div>
+                <form class="checklist-form" autocomplete="off">
+                    <div class="checkbox-group">
+                        <label class="checkbox-label">
+                            <input type="checkbox" name="skipStep6" autocomplete="off">
+                            <span>I'm ready to move on</span>
+                        </label>
+                    </div>
+                </form>
+            </section>
+
             <section id="actionPlan" class="step-content">
-                <h2>6. Action Plan</h2>
+                <h2>7. Next Steps</h2>
                 <div class="content-box">
                     <h3>Implementation Strategy</h3>
                     <p>Your roadmap to electrification:</p>
@@ -299,7 +326,7 @@
                 <form class="checklist-form" autocomplete="off">
                     <div class="checkbox-group">
                         <label class="checkbox-label">
-                            <input type="checkbox" name="skipStep6" autocomplete="off">
+                            <input type="checkbox" name="skipStep7" autocomplete="off">
                             <span>I'm ready to save my project file and celebrate</span>
                         </label>
                     </div>
