--- a/index.html
+++ b/index.html
@@ -81,10 +81,21 @@
                             <div class="checkbox-subgroup">
                                 <label class="checkbox-label">
                                     <input type="checkbox" name="electrification" value="heating" autocomplete="off">
-                                    <span>Heating Systems <span class="tooltip-container"><span class="tooltip">This could be a natural gas furnace, boiler or wall heater. Or even a gas fireplace if it is used for heating.</span>ⓘ</span></span>
+                                    <span>Heating Systems <span class="tooltip-container"><span class="tooltip">This could be a natural gas furnace, boiler or wall heater. Or even a gas fireplace if it is used for heating. 
+                                        We'll need to know the capacity of the existing gas heating unit(s); BTUs per hour (Btu/h) is a measure of heating capacity of natural gas heaters and usually appears on the unit.</span>ⓘ</span></span>
                                 </label>
                                 <div class="quantity-field" data-for="heating">
-                                    <label>Replace <input type="number" min="1" max="20" value="2" name="heating_quantity"> tons <span class="tooltip-container"><span class="tooltip">A "ton" in heating refers to the cooling capacity of an air conditioner or heat pump. One ton equals 12,000 BTU/hour of cooling capacity. For heating, this typically translates to about 1-1.5 tons per 500-600 square feet of living space.</span>ⓘ</span> of natural gas heating system capacity with new electric heat pump(s)</label>
+                                    <div class="heating-input-group">
+                                        <label>Replace an existing gas heating unit with:</label>
+                                        <div class="input-row">
+                                            <input type="number" min="6000" max="120000" value="30000" name="heating_quantity" step="6000" placeholder="30000">
+                                            <span class="unit-label">BTU/h capacity</span>
+                                            <span class="tooltip-container"><span class="tooltip">BTUs per hour (Btu/h) is a measure of heating capacity of natural gas heaters and usually appears on the unit. Step increment for this field is 6,000 BTU/h (½ ton units).</span>ⓘ</span>
+                                        </div>
+                                        <div class="description">with a new electric heat pump. 
+                                            <span class="tooltip-container"><span class="tooltip">A heat pump is a device that transfers heat from one location to another, rather than generating heat directly. It provides both heating and cooling, and is more efficient than a gas heater.</span>ⓘ</span>
+                                        </div>
+                                    </div>
                                 </div>
                                 
                                 <label class="checkbox-label">
