--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
             <section id="loadAnalysis" class="step-content">
                 <h2>4. Current Load Analysis</h2>
-                <p>Now we will calculate how much remaining panel capacity you have for electrification.</p>
+                <p>Now we need to analyze how much remaining panel capacity you have for electrification. This step is required to proceed.</p>
                 <p>We can do this in two ways:</p>
                 <ol>
                     <li>Top-down approach: Use your actual electricity usage data to determine your available panel capacity.</li>
@@ -259,15 +259,6 @@
                     <h3>Existing Capacity Summary</h3>
                     <p id="capacitySummaryText"></p>
                 </section>
-
-                <form class="checklist-form" autocomplete="off">
-                    <div class="checkbox-group">
-                        <label class="checkbox-label">
-                            <input type="checkbox" name="skipStep4" autocomplete="off">
-                            <span>Skip this step</span>
-                        </label>
-                    </div>
-                </form>
             </section>
 
             <section id="gasAnalysis" class="step-content">
@@ -298,6 +289,24 @@
             <section id="planNewAppliances" class="step-content">
                 <h2>6. Plan for New Appliances</h2>
                 <div class="content-box">
+                    <h3>Your Electrification Goals Summary</h3>
+                    <p>Based on your selections in Step 2, here are the appliances you plan to electrify:</p>
+                    
+                    <div id="appliancesSummary" class="appliances-summary">
+                        <table class="appliances-table">
+                            <thead>
+                                <tr>
+                                    <th>Appliance Type</th>
+                                    <th>Quantity</th>
+                                    <th>Details</th>
+                                </tr>
+                            </thead>
+                            <tbody id="appliancesTableBody">
+                                <!-- Data will be populated by JavaScript -->
+                            </tbody>
+                        </table>
+                    </div>
+                    
                     <h3>Define Your New Electric Appliances</h3>
                     <p>Now that we know your panel capacity and electrification goals, let's plan what specific electric appliances you'll need to replace your gas appliances.</p>
                     <p>This step will help you identify the exact models and specifications of the electric appliances that will work with your existing panel capacity.</p>
