Added CSV files for appliances and reading them into the app

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                                     <span>Other Gas Appliances <span class="tooltip-container"><span class="tooltip">Other natural gas appliances might include pool heaters, outdoor BBQs or space heaters, gas fireplaces, and even kilns.</span>ⓘ</span></span>
                                 </label>
                                 <div class="quantity-field" data-for="other">
-                                    <label>Replace these other natural gas appliances with electric appliances that will require <input type="number" min="1" max="200" value="10" name="other_quantity"> amps of electrical capacity</label>
+                                    <label>Replace <input type="number" min="1" max="5" value="1" name="other_quantity"> other natural gas appliance(s)</label>
                                 </div>
                             </div>
 
@@ -308,7 +308,6 @@
                             <thead>
                                 <tr>
                                     <th>Appliance Type</th>
-                                    <th>Quantity</th>
                                     <th>Details</th>
                                 </tr>
                             </thead>
