Added details button to table showing selected appliances

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                                     <th>Model</th>
                                     <th>Panel Amps (240V)</th>
                                     <th>Cost Range</th>
-                                    <th>Energy Rating</th>
+                                    <th>Details</th>
                                 </tr>
                             </thead>
                             <tbody id="csvAppliancesTableBody">
@@ -347,7 +347,7 @@
                             <p><strong>Remaining Capacity:</strong> <span id="remainingCsvCapacity">0</span> amps</p>
                         </div>
                     </div>
-                    <p>You can select any of the appliances in the table to see more details about them, including cost, energy rating, and installation notes.</p>
+                    <p>Click the "📋 Details" button for any appliance to see comprehensive product information, including all available data from our database.</p>
                 </div>
                 <form class="checklist-form" autocomplete="off">
                     <div class="checkbox-group">
